lista los aprendices pero los repite

--- a/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/asistencia/asistencia.component.html
@@ -71,10 +71,14 @@
   <tbody>
     <tr *ngFor="let asistencia of asistenciaList; let i = index">
       <td>{{ i + 1 }}</td>
-      <td>{{ asistencia.primerNombre }}</td>
-      <td>{{ asistencia.correo }}</td>
+      <td>{{ asistencia.nombreAprendiz }}</td>
+      <td>{{ asistencia.correoAprendiz }}</td>
       <td><button class="btn btn-success" (click)="marcarAsistencia(asistencia, true)">Asistió</button></td>
       <td><button class="btn btn-danger" (click)="marcarAsistencia(asistencia, false)">No Asistió</button></td>
+      <td>
+        <button class="btn btn-info" *ngIf="asistencia.asistio !== undefined" (click)="editarAsistencia(asistencia)">Editar</button>
+      </td>
     </tr>
   </tbody>
 </table>
+
