--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
@@ -39,13 +39,18 @@
         </ul>
   </div>
 </nav>
-<h2 class="subtitulo mt-5">Actividades</h2>
-<div class="instagram-div">
-  <h1 class="titulo">Prueba</h1>
-  <p><strong>Descripción:</strong> Buen día</p>
-  <button class="boton">Ver Archivo</button>
-</div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<h2 class="subtitulo mt-5">Guias</h2>
 
+
+<div *ngFor="let guia of guias" class="instagram-div">
+  <h1 class="titulo">{{ guias.nombre }}</h1>
+  <p><strong>Descripción:</strong>{{ guias.comentario }}</p>
+  <p><strong>Fecha de Inicio:</strong> {{ formatDate(guias.fechaInicio) }}</p>
+  <p><strong>Fecha de Fin:</strong> {{ formatDate(guias.fechaFinal) }}</p>
+  <a (click)="descargarArchivo(guia.archivoUrl, guia.nombreArchivo)" type="submit" class="btn btn-primary boton">Ver archivo</a>
+</div>
+
+
+<div *ngIf="!userInfo || !guias">
+  <p>Cargando información...</p>
+</div>
