--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.scss
@@ -1,24 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&display=swap');
 
 
-.subtitulo{
-    color: #0a7775;
-    text-align: center;
-    font-weight: bolder;
-    font-family: "Outfit", sans-serif;
-    font-size: 50px;
-    font-style: normal;
-}
 /* Container */
 .titulo {
   color: #0a7775;
   text-align: center;
   font-weight: bolder;
   font-size: 25px;
-  font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
+  font-family: "Madimi One", sans-serif;
   font-style: normal;
   
 }
@@ -26,12 +15,13 @@
 .titulo2 {
   color: #0a7775;
   text-align: left;
-  margin-left: 20px;
   font-weight: bolder;
-  font-family: "Outfit", sans-serif;
   font-size: 40px;
   margin-top: 20px;
+  margin-left: 20px;
+  font-family: "Madimi One", sans-serif;
   font-style: normal;
+ 
 }
 
 .instagram-div {
