--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.html
@@ -35,20 +35,25 @@
                   <a class="nav-link otro" (click)="logout()">Cerrar Sesión</a>
                 </li>
               </div>
-            </div> 
+            </div>
         </ul>
   </div>
 </nav>
 <h2 class="subtitulo mt-5">Guias</h2>
 
 
-<div *ngFor="let guia of guias" class="instagram-div">
-  <h1 class="titulo">{{ guias.nombre }}</h1>
-  <p><strong>Descripción:</strong>{{ guias.comentario }}</p>
-  <p><strong>Fecha de Inicio:</strong> {{ formatDate(guias.fechaInicio) }}</p>
-  <p><strong>Fecha de Fin:</strong> {{ formatDate(guias.fechaFinal) }}</p>
-  <a (click)="descargarArchivo(guia.archivoUrl, guia.nombreArchivo)" type="submit" class="btn btn-primary boton">Ver archivo</a>
+<div>
+  <h2>Guías</h2>
+  <div *ngFor="let guia of guias">
+    <h3>{{ guia.nombre }}</h3>
+    <p>{{ guia.comentario }}</p>
+    <p>Publicado por: {{ guia.primerNombre }} {{ guia.primerApellido }}</p>
+    <p>Fecha de Inicio: {{ guia.fechaInicio | date: 'dd/MM/yyyy' }}</p>
+    <p>Fecha Final: {{ guia.fechaFinal | date: 'dd/MM/yyyy' }}</p>
+    <img *ngIf="guia.urlImagen" [src]="guia.urlImagen" alt="Imagen de la Guía" />
+  </div>
 </div>
+
 
 
 <div *ngIf="!userInfo || !guias">
