--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.scss
@@ -16,6 +16,7 @@
 
 .graficoTres,
 .graficoCuatro {
+  margin-top: 20px;
   text-align: center;
   width: 48%;
 }
@@ -28,7 +29,7 @@
 }
 
 .titulos {
-  margin-bottom: 15px;
+  margin-bottom: 25px;
   font-size: 28px;
   color: #088a88;
 }
@@ -48,6 +49,7 @@
   }
   .graficoTres,
 .graficoCuatro {
+  margin-top: 20px;
   text-align: center;
   width: 58%;
   }
