--- a/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/vista-instructor/vista-instructor.component.html
@@ -39,11 +39,21 @@
         </ul>
   </div>
 </nav>
-<h1 class="titulo">Bienvenido instructor</h1>
-<h4 class="sub-titulo">Formación ADSO</h4>
-  <div class="descripción">
-    <p>¡Explora el mundo del aprendizaje con nuestros talentosos guías en ACANNER! Nuestros instructores son expertos apasionados comprometidos en enriquecer tu experiencia de aprendizaje. Con su dedicación y conocimientos especializados, te guiarán a través de cada módulo del curso, asegurándose de que alcances tus metas de manera efectiva."</p>
+
+<div class="container">
+  <div class="contenidoIzquierdo">
+    <h1 class="titulo">Bienvenido instructor</h1>
+    <h4 class="sub-titulo">Formación ADSO</h4>
+    <div class="descripción">
+      <p>¡Explora el mundo del aprendizaje con nuestros talentosos guías en ACANNER! Nuestros instructores son expertos apasionados comprometidos en enriquecer tu experiencia de aprendizaje. Con su dedicación y conocimientos especializados, te guiarán a través de cada módulo del curso, asegurándose de que alcances tus metas de manera efectiva."</p>
+    </div>
   </div>
+<div class="contenidoDerecho">
   <div class="imagen">
     <img class="imagen img-fluid" src="assets/imagenes/Instructor.jpg" alt="Instructor">
   </div>
+</div>
+
+</div>
+
+
