--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.scss
@@ -36,7 +36,7 @@
   color: #ffffff; /* Color del texto del botón */
   border: none;
   padding: 10px 20px;
-  font-size: 18px;
+  font-size: 15px;
   border-radius: 8px;
   cursor: pointer;
 }
@@ -44,6 +44,8 @@
 .instagram-div p {
   font-size: 16px;
   color: #262626;
+  margin-top: 10px;
+  
 }
 
 //* Estilos Nav */
