--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.html
@@ -39,14 +39,11 @@
         </ul>
   </div>
 </nav>
-  <!-- <h2 class="subtitulo mt-5" >Asistencias</h2>
-      <div class="container">
-        <ul class="list-group">
-          <li class="list-group-item" *ngFor="let asistencia of asistenciaList">
-              <h4>{{ asistencia.nombreArchivo }}</h4>
-              <p>{{ asistencia.comentario }}</p>
-              <a (click)="descargarArchivo(asistencia.archivoUrl)" class="btn btn-primary-ver-archivo" >Ver archivo</a>
-          </li>
-        </ul>
-      </div>
-   -->
+
+<h3>asistencia</h3>
+
+<canvas baseChart
+        [data]="pieChartData.data"
+        [labels]="pieChartData.labels"
+        [type]="'pie'">
+</canvas>
