--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Protest+Riot&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0');
 
 .subtitulo{
     color: #0a7775;
