--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-asistencia/ver-asistencia.component.scss
@@ -142,3 +142,179 @@ button {
 .dropdown-item:hover {
   background-color: #070707;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
+.chart-container {
+  margin-top: 2%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+}
+
+.graficoUno,
+.graficoDos {
+  text-align: center;
+  width: 48%;
+}
+
+.graficoTres,
+.graficoCuatro {
+  margin-top: 20px;
+  text-align: center;
+  width: 48%;
+}
+
+.chart {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 10px;
+}
+
+.titulos {
+  margin-bottom: 25px;
+  font-size: 28px;
+  color: #088a88;
+}
+
+.titulos::after {
+  content: "";
+  display: block;
+  height: 1px;
+  background-color: #ddd;
+  margin: 8px 0;
+}
+
+@media (max-width: 1200px) {
+  .graficoUno,
+  .graficoDos {
+    width: 60%;
+  }
+  .graficoTres,
+.graficoCuatro {
+  margin-top: 20px;
+  text-align: center;
+  width: 58%;
+  }
+}
+
+
+@media (max-width: 1000px) {
+  .graficoUno,
+  .graficoDos {
+    width: 75%;
+    margin: 0 auto;
+  }
+  .graficoTres,
+  .graficoCuatro {
+    margin: 0 auto;
+    text-align: center;
+    width: 68%;
+  }
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
+  }
+  .titulos {
+    margin-bottom: 15px;
+    font-size: 25px;
+    color: #088a88;
+  }
+}
+
+
+@media (max-width: 800px) {
+  .graficoUno,
+  .graficoDos {
+    width: 85%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
+    margin: 0 auto;
+  }
+  .graficoTres,
+  .graficoCuatro {
+    margin: 0 auto;
+    text-align: center;
+    width: 78%;
+  }
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
+  }
+  .titulos {
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #088a88;
+  }
+}
+
+@media (max-width: 625px) {
+  .graficoUno,
+  .graficoDos {
+    width: 100%; /* Ocupar el 100% del ancho en pantallas más pequeñas */
+    margin: 0 auto;
+  }
+
+  .graficoTres,
+  .graficoCuatro {
+    margin: 0 auto;
+    text-align: center;
+    width: 88%;
+  }
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column; /* Apilar los gráficos en pantallas más pequeñas */
+  }
+  .titulos {
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #088a88;
+  }
+}
+
+@media (max-width: 480px) {
+  .graficoUno,
+  .graficoDos {
+    width: 100%; /* Ocupar el 90% del ancho en pantallas más pequeñas */
+    margin: 0 auto; /* Centrar */
+  }
+  .graficoTres,
+  .graficoCuatro {
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+  }
+
+  .chart-container {
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .chart h2 {
+    font-size: 18px; /* Tamaño de fuente más pequeño para títulos */
+  }
+}
+
+@media (min-width: 1800px) {
+  .graficoDos {
+    width: 45%; /* Limitar el ancho al 30% después de 1600px */
+  }
+  .graficoUno{
+    width: 35%;
+  }
+  .graficoTres{
+    width: 38%;
+  }
+  .graficoCuatro{
+    width: 38%;
+  }
+  .chart-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+  }
+}
