--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-actividad/ver-actividad.component.scss
@@ -47,6 +47,11 @@
   margin-top: 10px;
   
 }
+.noticias-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 
 //* Estilos Nav */
 nav{
