--- a/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.scss
@@ -80,6 +80,11 @@ body {
     justify-content: space-between;
   }
 
+  .nav-link {
+    font-weight: bold;
+    color:#008a88;
+  }
+
   .nav {
     display: none;
   }
