--- a/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/index/index.component.scss
@@ -119,6 +119,7 @@ body {
   }
 
 .titulo {
+  margin-top: 5%;
   text-align: center;
   line-height: 1.0;
   font-size: 35px;
@@ -126,7 +127,7 @@ body {
 }
 
 .img-fluid {
-  max-width: 90%;
+  max-width: 80%;
   height: auto;
 }
 
@@ -141,7 +142,7 @@ body {
     text-align: center;
     line-height: 1;
     font-size: 33px;
-    margin-top: 20px;
+    margin-top: 30px;
 
   }
   .descripcion {
